# trading-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  active_etf_proxy_model_00981A_00991A.md  backtest_gui.py  dashboard.py  main.py  pyproject.toml  requirements-phased.txt  requirements.txt  taiwan_trading_bot_master.md  tw_rebalancing_rules_2026_07.md
config/: settings.yaml  strategy.yaml
deploy/: DEPLOY.md  DEPLOY_MACOS.md  DEPLOY_WINDOWS.md  build_initial_book.py  emergency_stop.ps1  emergency_stop.sh  install_task.ps1  oddlot_depth_check.py  requirements-lock.txt  trading-bot.service
docs/: DRAWDOWN_EVENT_STUDY_2020_2022.md  E1_E2_WALKFORWARD.md  E1_E3_COMPARISON.md  E4_E5_COMPARISON.md  E7B_DEPTH_MODULATION.md  E7_US_SEMI_DEFENSE.md  E8_PLAN.md  EVENT_DETECTION_RESEARCH.md  IMPROVEMENT_PLAN_v2.md  M5_DEPLOYMENT_PLAN.md  MULTI_ASSET_UPGRADE_PLAN.md  PIT_REBUILD_PLAN.md  RESEARCH_JOURNEY.md
notebooks/: a1_atr_compare.py  a1_band_sweep.py  a1_peryear_sweep.py  a1a2_combo_compare.py  a2_peryear_sweep.py  adjust_probe.py  ai_score_behavior.py  ai_window_analysis.py  ai_window_extra.py  b2_backtest_smoke.py  b3_backtest_run.py  b3_debug.py  b4_consistency.py  benchmark_backtest.py  build_watchlist.py  c_paper_validate.py  capitulation_backtest.py  capitulation_refine2019.py  capitulation_regime_test.py  capped_backtest.py  challenge_years.py  check_sameday.py  concurrency_probe.py  confirm_7man.py  confirm_final.py  dca_compare.py  deep_bear_backtest.py  diag_filters.py  diag_universe.py  dump_drawdown_detail.py  e1_nday_confirm.py  e1e2_combined_validate.py  e1e2_walkforward.py  e2_hysteresis_band.py  e3_atr_band.py  e4_second_line.py  e5_combination_gate.py  e7_us_semi_defense.py  e7b_depth_modulation.py  exit_sweep.py  (+47 more)
tests/: conftest.py  (+18 more)
(+56 files in other folders)
